// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> renders correctly 1`] = `
<div
  className="price -regular -black"
>
  <div
    className="price--inner"
  >
    <span
      className="price--sub"
    >
      £
    </span>
    <span
      className="price--pounds"
    >
      POA
    </span>
  </div>
</div>
`;

exports[`<Price /> renders correctly with optional props 1`] = `
<div
  className="price class -small -orange"
>
  <div
    className="price--inner"
  >
    <span
      className="price--sub"
    >
      £
    </span>
    <span
      className="price--pounds"
    >
      250
    </span>
    <span
      className="price--sub"
    >
      .
      95
    </span>
  </div>
</div>
`;
